deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-master-api
  namespace: health-master-namespace
  labels:
    app: health-master-api
spec:
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
  selector:
    app: health-master-api
